CHANGELOG
---------
* Thu Apr 04 2019 Tom G. Christensen <swpkg@jupiterrise.com> - 2.8.9rel.1-1
- Update to 2.8.9rel.1

* Mon Apr 09 2018 Tom G. Christensen <swpkg@jupiterrise.com> - 2.8.9dev.17-1
- Update to 2.8.9dev.17

* Wed Dec 21 2016 Tom G. Christensen <swpkg@jupiterrise.com> - 2.8.9dev.11-1
- Update to 2.8.9dev.11

* Sun Mar 06 2016 Tom G. Christensen <swpkg@jupiterrise.com> - 2.8.9dev.8-1
- First package